Fix overflow when show-tips plugin is disabled

--- a/src/plugins/show-tips/Tip.less
+++ b/src/plugins/show-tips/Tip.less
@@ -1,9 +1,14 @@
-.dcg-calculator-api-container .dcg-expressions-branding {
-  // Usage tip will be above the normal bounding box
-  overflow: visible;
-}
-
 .dcg-calculator-api-container {
+  .dcg-expressions-branding {
+    // Usage tip will be above the normal bounding box
+    overflow: visible;
+  }
+
+  .dcg-expressionlist {
+    // Need to hide overflow underneath the expressions
+    overflow: hidden;
+  }
+
   .dsm-usage-tip {
     position: relative;
     transition: bottom 0.4s, height 0.4s;
